sabnzbd/sabnzbd-dep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: sabnzbd
  name: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - image: olibob/sabnzbd
        name: sabnzbd
        volumeMounts:
          - mountPath: /dls
            name: dl
          - mountPath: /datadir
            name: data
        ports:
          - containerPort: 8080
      volumes:
        - name: dl
          persistentVolumeClaim:
            claimName: sabclaim
        - name: data
          persistentVolumeClaim:
            claimName: sabdataclaim
