sabnzbd/sabnzbd-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
  - protocol: TCP
    port: 8080
  type: LoadBalancer
